tooling/nargo_cli/tests/snapshots/execution_success/regression_8011/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0]",
    "BRILLIG CALL func 0: inputs: [], outputs: [Simple(Witness(0))]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32837 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 0 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(1), offset_address: Relative(2) }, Call { location: 12 }, Call { location: 13 }, Mov { destination: Direct(32836), source: Relative(1) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 32836 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 1 }, Stop { return_data: HeapVector { pointer: Relative(2), size: Relative(3) } }, Return, Call { location: 67 }, Mov { destination: Relative(2), source: Direct(1) }, BinaryIntOp { destination: Direct(1), op: Add, bit_size: U32, lhs: Direct(1), rhs: Direct(2) }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, Store { destination_pointer: Relative(2), source: Relative(3) }, Const { destination: Relative(4), bit_size: Integer(U64), value: 18446744073709551611 }, Const { destination: Relative(5), bit_size: Integer(U64), value: 10 }, Const { destination: Relative(6), bit_size: Integer(U64), value: 1 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 1 }, Mov { destination: Relative(1), source: Relative(4) }, Jump { location: 24 }, Const { destination: Relative(10), bit_size: Integer(U64), value: 9223372036854775808 }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U64, lhs: Relative(1), rhs: Relative(10) }, BinaryIntOp { destination: Relative(9), op: Add, bit_size: U64, lhs: Relative(5), rhs: Relative(10) }, BinaryIntOp { destination: Relative(4), op: LessThan, bit_size: U64, lhs: Relative(8), rhs: Relative(9) }, JumpIf { condition: Relative(4), location: 58 }, Jump { location: 30 }, Load { destination: Relative(4), source_pointer: Relative(2) }, Mov { destination: Relative(2), source: Direct(1) }, BinaryIntOp { destination: Direct(1), op: Add, bit_size: U32, lhs: Direct(1), rhs: Direct(2) }, Store { destination_pointer: Relative(2), source: Relative(3) }, Const { destination: Relative(3), bit_size: Integer(U128), value: 170141183460469231731687303715884105715 }, Const { destination: Relative(5), bit_size: Integer(U128), value: 170141183460469231731687303715884105730 }, Const { destination: Relative(6), bit_size: Integer(U128), value: 1 }, Mov { destination: Relative(1), source: Relative(3) }, Jump { location: 39 }, BinaryIntOp { destination: Relative(3), op: LessThan, bit_size: U128, lhs: Relative(1), rhs: Relative(5) }, JumpIf { condition: Relative(3), location: 49 }, Jump { location: 42 }, Load { destination: Relative(1), source_pointer: Relative(2) }, BinaryIntOp { destination: Relative(2), op: Equals, bit_size: U32, lhs: Relative(4), rhs: Relative(1) }, JumpIf { condition: Relative(2), location: 47 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(3) } }, Mov { destination: Relative(1), source: Relative(4) }, Return, BinaryIntOp { destination: Relative(3), op: Add, bit_size: U128, lhs: Relative(1), rhs: Relative(6) }, Load { destination: Relative(8), source_pointer: Relative(2) }, BinaryIntOp { destination: Relative(9), op: Add, bit_size: U32, lhs: Relative(8), rhs: Relative(7) }, BinaryIntOp { destination: Relative(10), op: LessThanEquals, bit_size: U32, lhs: Relative(8), rhs: Relative(9) }, JumpIf { condition: Relative(10), location: 55 }, Call { location: 73 }, Store { destination_pointer: Relative(2), source: Relative(9) }, Mov { destination: Relative(1), source: Relative(3) }, Jump { location: 39 }, BinaryIntOp { destination: Relative(4), op: Add, bit_size: U64, lhs: Relative(1), rhs: Relative(6) }, Load { destination: Relative(8), source_pointer: Relative(2) }, BinaryIntOp { destination: Relative(9), op: Add, bit_size: U32, lhs: Relative(8), rhs: Relative(7) }, BinaryIntOp { destination: Relative(10), op: LessThanEquals, bit_size: U32, lhs: Relative(8), rhs: Relative(9) }, JumpIf { condition: Relative(10), location: 64 }, Call { location: 73 }, Store { destination_pointer: Relative(2), source: Relative(9) }, Mov { destination: Relative(1), source: Relative(4) }, Jump { location: 24 }, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 72 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 5019202896831570965 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "nZPNjsIgEIDfhTOH8jOl7asYY7CiISG0wXaTjem775QRVw/10AsfMHwMQzIPdnHn+Xby8TrcWXd4sHPyIfjbKQy9nfwQcffBqnUQmnWSMwGEmmAyJMYUAgg1wWQotDVCsK5GSIIitKwznGncbBC42SI0AQg1gU5CRRBZAPJAETQBCE3ODm1GTY+oBUESFAE9vSyclZpPU3JuLfntE/BrRptcnFgX5xA4+7Fhzofuo42Zk00YrThz8YLEC68+uHW28H+72lahuKZ5yfBpi21bgnrqEvQe38jiG7XHb3TxW7nlf6m+Lc8XwmzpsK3rV3rdwA4fqpIfKr3HF1B8qXaUL9SrftV++Edc2d6nj55c1puSt+fgnsvrHPu36PQ7lkjp6TENvbvMya03vTU2jofacCOP2NDYIQejuIHjsqb+Aw==",
  "file_map": {
    "50": {
      "source": "unconstrained fn main() -> pub u32 {\n    let s1 = loop_with_negative_literal();\n    let s2 = loop_with_u128_literal();\n    assert_eq(s1, s2);\n    s1\n}\n\nfn loop_with_negative_literal() -> u32 {\n    let s: i64 = -5;\n    let e: i64 = 10;\n    let mut sum = 0;\n    for _ in s..e {\n        sum += 1;\n    }\n    sum\n}\n\nfn loop_with_u128_literal() -> u32 {\n    let s: u128 = 170141183460469231731687303715884105715;\n    let e: u128 = 170141183460469231731687303715884105730;\n    let mut sum = 0;\n    for _ in s..e {\n        sum += 1;\n    }\n    sum\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
