tooling/nargo_cli/tests/snapshots/execution_success/regression_8011/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[regression_8011] Circuit output: 15
